# crew_AI

./: README.md  pyproject.toml
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack  financial_analyst_crew  financial_analyst_crew.cmd  jp.py  jsondiff  jsonpatch  jsonpointer
src/financial_analyst_crew/: README.md  crew.py
src/financial_analyst_crew/config/: agents.yaml
